# GRAVLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LibArchitecture.asta  README.md
GRAVLib/: CMakeLists.txt  pch.h
GRAVLib/cmake/: utils.cmake
GRAVLib/include/: CMakeLists.txt  GRAVLibCore.h  Platform.h  Primitives.h
GRAVLib/include/Concurrency/: CMakeLists.txt
GRAVLib/include/Concurrency/Atomics/: Atomics.h
GRAVLib/include/Concurrency/Fibers/: Fiber.h  FiberID.h  FiberTypes.h
GRAVLib/include/Concurrency/Fibers/Exceptions/: FiberCallbackException.h  FiberCreationException.h  FiberException.h  FiberQuitCallbackException.h  FiberSwitchingException.h  FiberToThreadException.h
GRAVLib/include/Concurrency/Jobs/: CMakeLists.txt  Counter.h  Declaration.h  JobManager.h  JobManagerCallbacks.h  JobManagerOptions.h  JobPriority.h  JobSystem.h
GRAVLib/include/Concurrency/Jobs/Exceptions/: CounterWaitListFullException.h  ReadyFiberException.h
GRAVLib/include/Concurrency/Locks/: CMakeLists.txt  Locks.h  LocksNone.h  MultiLock.h  RecursiveLock.h  ScopedLock.h  SpinLock.h  UnnecessaryLock.h
GRAVLib/include/Concurrency/Locks/Defines/: LocksGRAV.h  LocksSTD.h
GRAVLib/include/Concurrency/Threads/: TLS.h  Thread.h  ThreadID.h  ThreadTypes.h
GRAVLib/include/Concurrency/Threads/Exceptions/: ThreadAffinityException.h  ThreadCreationException.h  ThreadException.h
GRAVLib/include/Containers/ThreadSafe/: CMakeLists.txt  Queue.h
GRAVLib/include/Debug/: Assertions.h  CMakeLists.txt
GRAVLib/include/Debug/Instrumentation/: CMakeLists.txt  Instrumentor.h
GRAVLib/include/Debug/Logging/: CMakeLists.txt  Logging.h
GRAVLib/include/Debug/Logging/Loggers/: CMakeLists.txt  LogManager.h  LogMessage.h  LogVerbosity.h  Logger.h
GRAVLib/include/Debug/Logging/Sinks/: CMakeLists.txt  FileSink.h  ISink.h  MSVCSink.h  OStreamSink.h  Sink.h
GRAVLib/include/Events/: CMakeLists.txt  Event.h  EventHandle.h  IEventHandleGenerator.h  SimpleEventHandleGenerator.h
GRAVLib/include/GRAVLib/: GRAVLibCore.h  LibExportImport.h  Platform.h  Primitives.h
GRAVLib/include/GRAVLib/Concurrency/Atomics/: Atomics.h  CMakeLists.txt
GRAVLib/include/GRAVLib/Concurrency/Fibers/: CMakeLists.txt  Fiber.h  FiberID.h  FiberTypes.h
GRAVLib/include/GRAVLib/Concurrency/Jobs/: Counter.h  Declaration.h  JobManager.h  JobManagerCallbacks.h  JobManagerOptions.h  JobPriority.h  JobSystem.h
GRAVLib/include/GRAVLib/Containers/: CMakeLists.txt
GRAVLib/include/GRAVLib/Debug/: CMakeLists.txt
GRAVLib/include/GRAVLib/Events/: CMakeLists.txt  Event.h  EventHandle.h  IEventHandleGenerator.h
GRAVLib/include/GRAVLib/IO/: CMakeLists.txt
GRAVLib/include/GRAVLib/Memory/: CMakeLists.txt  Pointers.h  Singleton.h
GRAVLib/include/GRAVLib/Random/: CMakeLists.txt  IRandomNumberGenerator.h  MT19937.h
GRAVLib/include/GRAVLib/Time/: Durations.h  Stopwatch.h  Timestep.h
GRAVLib/include/GRAVLib/Utils/: FunctionSignature.h  MacroDefinitions.h  StringUtils.h
GRAVLib/include/IO/Exceptions/: CMakeLists.txt  FileNotFoundException.h  IOException.h  UnauthorizedAccessException.h
GRAVLib/include/IO/Files/: File.h  FileModes.h  FileSystem.h  SeekOrigin.h  TextFile.h
GRAVLib/include/Locks/: CMakeLists.txt  MultiLock.h  STLLocking.h  ScopedLock.h  SpinLock.h
GRAVLib/include/Memory/: CMakeLists.txt  Pointers.h  Singleton.h
GRAVLib/include/Random/: IRandomNumberGenerator.h  MT19937.h
GRAVLib/include/Time/: CMakeLists.txt  Durations.h  Stopwatch.h  Timestep.h
GRAVLib/include/Utils/: CMakeLists.txt  MacroDefinitions.h  StringUtils.h
GRAVLib/src/: CMakeLists.txt
GRAVLib/src/Concurrency/: CMakeLists.txt
GRAVLib/src/Concurrency/Fibers/: CMakeLists.txt  Fiber.cpp  FiberID.cpp
GRAVLib/src/Concurrency/Jobs/: CMakeLists.txt  Counter.cpp  Declaration.cpp  JobManager.cpp  JobManagerCallbacks.cpp  JobManagerOptions.cpp  JobPriority.cpp
GRAVLib/src/Concurrency/Locks/: CMakeLists.txt  MultiLock.cpp  RecursiveLock.cpp  ScopedLock.cpp  SpinLock.cpp  UnnecessaryLock.cpp
GRAVLib/src/Concurrency/Threads/: CMakeLists.txt  TLS.cpp  Thread.cpp  ThreadID.cpp  ThreadTypes.cpp
GRAVLib/src/Containers/: CMakeLists.txt
GRAVLib/src/Containers/ThreadSafe/: CMakeLists.txt  Queue.cpp
GRAVLib/src/Debug/: CMakeLists.txt
GRAVLib/src/Debug/Instrumentation/: CMakeLists.txt  Instrumentor.cpp
GRAVLib/src/Debug/Logging/: CMakeLists.txt  Logging.cpp
GRAVLib/src/Events/: CMakeLists.txt  Event.cpp  IEventHandleGenerator.cpp  SimpleEventHandleGenerator.cpp
GRAVLib/src/IO/: CMakeLists.txt
GRAVLib/src/IO/Exceptions/: CMakeLists.txt  FileNotFoundException.cpp  IOException.cpp  UnauthorizedAccessException.cpp
GRAVLib/src/IO/Files/: CMakeLists.txt  File.cpp  FilesModes.cpp  TextFile.cpp
GRAVLib/src/Locks/: CMakeLists.txt  MultiLock.cpp  ScopedLock.cpp  SpinLock.cpp
GRAVLib/src/Memory/: CMakeLists.txt  Pointers.cpp
GRAVLib/src/Random/: CMakeLists.txt  IRandomNumberGenerator.cpp  MT19937.cpp
GRAVLib/src/Time/: CMakeLists.txt  Stopwatch.cpp  Timestep.cpp
GRAVLib/src/Utils/: CMakeLists.txt  StringUtils.cpp
GRAVLib/tests/: CMakeLists.txt  eventTests.cpp
GRAVLib/tests/Concurrency/: CMakeLists.txt
GRAVLib/tests/Concurrency/Fibers/: CMakeLists.txt  FiberTests.cpp
GRAVLib/tests/Concurrency/Jobs/: CMakeLists.txt  JobManagerTests.cpp
GRAVLib/tests/Concurrency/Locks/: CMakeLists.txt  lockTests.cpp
GRAVLib/tests/Concurrency/Threads/: CMakeLists.txt  ThreadTests.cpp
GRAVLib/tests/Containers/: CMakeLists.txt  queueTests.cpp
GRAVLib/tests/Debug/: CMakeLists.txt
GRAVLib/tests/Debug/Logging/: CMakeLists.txt  LogManagerTests.cpp  LoggerTests.cpp
GRAVLib/tests/Events/: CMakeLists.txt  eventTests.cpp
GRAVLib/tests/IO/: CMakeLists.txt
GRAVLib/tests/IO/Files/: CMakeLists.txt  fileModesTests.cpp  fileTests.cpp  testFile.txt  testFile2.txt  textFileTests.cpp
GRAVLib/tests/Locks/: CMakeLists.txt  lockTests.cpp
GRAVLib/tests/Memory/: CMakeLists.txt  SingletonTests.cpp
GRAVLib/tests/Random/: CMakeLists.txt  randomTests.cpp
GRAVLib/tests/Time/: CMakeLists.txt  timeTests.cpp
GRAVLib/tests/Utils/: CMakeLists.txt
(+74 files in other folders)
