cmake_minimum_required(VERSION 3.21)

makelib(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/${PROJECT_NAME} SHARED True pch.h ${BuildTests} "")

option(GRAVLib_ENABLE_PROFILING "Enable Profiler" OFF)
cmake_dependent_option(GRAVLib_ENABLE_CONSOLE_PROFILING "Enable Console Logging" OFF GRAVLib_ENABLE_PROFILING OFF)


#GRAVLib Threading Options
set(GRAVLib_THREAD_LIBRARY_NONE	0)
set(GRAVLib_THREAD_LIBRARY_STD	1)
set(GRAVLib_THREAD_LIBRARY_GRAV 2)
set(GRAVLib_THREAD_LIBRARY_VALUES GRAVLib_THREAD_LIBRARY_NONE GRAVLib_THREAD_LIBRARY_STD GRAVLib_THREAD_LIBRARY_GRAV)

set(GRAVLib_THREAD_LIBRARY GRAVLib_THREAD_LIBRARY_GRAV CACHE STRING "Select Threading Library")
set_property(CACHE GRAVLib_THREAD_LIBRARY PROPERTY STRINGS ${GRAVLib_THREAD_LIBRARY_VALUES})

target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_THREAD_LIBRARY_NONE=${GRAVLib_THREAD_LIBRARY_NONE})
target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_THREAD_LIBRARY_STD=${GRAVLib_THREAD_LIBRARY_STD})
target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_THREAD_LIBRARY_GRAV=${GRAVLib_THREAD_LIBRARY_GRAV})
target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_THREAD_LIBRARY=${GRAVLib_THREAD_LIBRARY})


#Assertions
option(GRAVLib_ENABLE_ASSERTIONS "Enable Assertions" ON)
if(GRAVLib_ENABLE_ASSERTIONS)
	target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_ASSERTIONS)
endif()



#Profiling
if(GRAVLib_ENABLE_PROFILING)
	target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_PROFILE)
endif()

if(GRAVLib_ENABLE_CONSOLE_PROFILING)
	target_compile_definitions(${PROJECT_NAME} PUBLIC -D${PROJECT_NAME}_PROFILE_CONSOLE)
endif()